--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-    <head></head>
+    <head>
+        <title>profile</title>
+    </head>
     <body>
         hello, my name is jackson
     </body>
