--- a/index.html
+++ b/index.html
@@ -1,8 +1,37 @@
-<html>
-    <head>
-        <title>profile</title>
-    </head>
-    <body>
-        hello, my name is jackson
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jackson's Profile</title>
+    <link rel="stylesheet" href="styles.css"> <!-- 這裡連結了CSS文件 -->
+</head>
+<body>
+
+<header>
+    <h1>Welcome to My Profile</h1>
+</header>
+
+<section>
+    <div class="profile-info">
+        <img src="C:\Users\巫佳祐\Pictures\Saved Pictures\IMG_0087.JPG" alt="Profile Picture" width="150">
+        <div>
+            <h2>Hi, I'm Jackson!</h2>
+            <p>I'm a web developer and an enthusiast of all things tech. I love creating new things and learning new skills. I'm passionate about coding and software development.</p>
+        </div>
+    </div>
+
+    <div class="contact-info">
+        <h3>Contact Me</h3>
+        <p>Email: jacksonwu901224@gmail.com</p>
+        <p>Phone: +886 972 838 062</p>
+        <p>GitHub: <a href="https://github.com/JacksonWu901224" target="_blank">https://github.com/JacksonWu901224</a></p>
+    </div>
+</section>
+
+<footer>
+    <p>&copy; 2024 Jackson. All rights reserved.</p>
+</footer>
+
+</body>
 </html>
