--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <section>
     <div class="profile-info">
-        <img src="C:\Users\巫佳祐\Pictures\Saved Pictures\IMG_0087.JPG" alt="Profile Picture" width="150">
+        <img src="IMG_0087.JPG" alt="Profile Picture" width="150">
         <div>
             <h2>Hi, I'm Jackson!</h2>
             <p>I'm a web developer and an enthusiast of all things tech. I love creating new things and learning new skills. I'm passionate about coding and software development.</p>
