--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jackson's Profile</title>
-    <link rel="stylesheet" href="styles.css"> <!-- 這裡連結了CSS文件 -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -17,7 +17,8 @@
         <img src="IMG_0087.JPG" alt="Profile Picture" width="150">
         <div>
             <h2>Hi, I'm Jackson!</h2>
-            <p>I'm a web developer and an enthusiast of all things tech. I love creating new things and learning new skills. I'm passionate about coding and software development.</p>
+            <p>I'm enthusiast of all things tech. I love creating new things and learning new skills. I'm passionate about coding and software development.
+                Recently, I have been enthusiastic about blockchain.</p>
         </div>
     </div>
 
@@ -25,7 +26,9 @@
         <h3>Contact Me</h3>
         <p>Email: jacksonwu901224@gmail.com</p>
         <p>Phone: +886 972 838 062</p>
-        <p>GitHub: <a href="https://github.com/JacksonWu901224" target="_blank">https://github.com/JacksonWu901224</a></p>
+        <p>GitHub: <a href="https://github.com/JacksonWu901224" target="_blank">JacksonWu901224</a></p>
+        <P>Instagram: <a href="https://www.instagram.com/jacksonwu1224wmms/" target="_blank">JacksonWu1224wmms</a></P>
+        <p>Facebook: <a href="https://www.facebook.com/profile.php?id=100018745474835" target="_blank">巫佳祐</a></p>
     </div>
 </section>
 
