--- a/Recent.html
+++ b/Recent.html
@@ -1,6 +1,8 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" href="cardano.png">
+        <title>Recently</title>
     </head>
     <body>
         <header><h1>BTC</h1></header>
