--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jackson's Profile</title>
+    <title>Profile</title>
+    <link rel="icon" href="cardano.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -17,7 +18,7 @@
     <a href="javascript:void(0)" class="closebtn" onclick="toggleMenu()"></a>
     <a href="Recent.html">Recent</a>
     <a href="#projects">Projects</a>
-    <a href="#blog">Blog</a>
+    <a href="blog.html">Blog</a>
 </div>
 
 
