--- a/html/blog.html
+++ b/html/blog.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="styles.css">
-        <link rel="icon" href="cardano.png">
+        <link rel="stylesheet" href="../css/styles.css">
+        <link rel="icon" href="../photo/cardano.png">
         <title>Blog</title>
     </head>
     <body>
@@ -10,6 +10,7 @@
         <section>
             <div class="blog">
                 <h3>KNOW ABOUT ME</h3>
+                <h4>scalability interoperability sustainability</h4>
             </div>
 
         </section>
