--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
-    <link rel="icon" href="../photo/cardano.png">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="icon" href="photo/cardano.png">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
@@ -16,15 +16,15 @@
 
 <div id="sidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="toggleMenu()"></a>
-    <a href="../html/Recent.html">Recent</a>
+    <a href="html/Recent.html">Recent</a>
     <a href="#projects">Projects</a>
-    <a href="../html/blog.html">Blog</a>
+    <a href="html/blog.html">Blog</a>
 </div>
 
 
 <section id="main-content">
     <div class="profile-info">
-        <img src="../photo/IMG_0087.JPG" alt="Profile Picture" width="150">
+        <img src="photo/IMG_0087.JPG" alt="Profile Picture" width="150">
         <div>
             <h2>Hi, I'm Jackson!</h2>
             <p>I'm enthusiast of all things tech. I love creating new things and learning new skills. I'm passionate about coding and software development.
@@ -45,6 +45,6 @@
 <footer>
     <p>&copy; 2024 Jackson. All rights reserved.</p>
 </footer>
-<script src="../javascript/script.js"></script>
+<script src="javascript/script.js"></script>
 </body>
 </html>
