--- a/html/Recent.html
+++ b/html/Recent.html
@@ -18,6 +18,10 @@
             <img src="../photo/cardano.png" alt="ada" class="ada">
             <h2>ADA : <div id="ada-price" class="loading">Loading...</div></h2>
         </div>
+        <div class="image-container2">
+            <img src="../photo/snek.jpg" alt="snek" class="snek">
+            <h2>SNEK : <div id="snek-price" class="loading">Loading...</div></h2>
+        </div>
         <script src="../javascript/recent.js"></script>
     </body>
 </html>
