--- a/html/Recent.html
+++ b/html/Recent.html
@@ -7,19 +7,27 @@
     <body>
         <header><h1>price</h1></header>
         <div class="image-container1">
-            <img src="../photo/btc.png" alt="btc" class="btc">
+            <a href="https://bitcoin.org">
+                <img src="../photo/btc.png" alt="btc" class="btc">
+            </a>
             <h2>BTC : <div id="btc-price" class="loading">Loading...</div></h2>
         </div>
         <div class="image-container2">
-            <img src="../photo/eth.png" alt="eth" class="eth">
+            <a href="https://ethereum.org/">
+                <img src="../photo/eth.png" alt="eth" class="eth">
+            </a>
             <h2>ETH : <div id="eth-price" class="loading">Loading...</div></h2>
         </div>
         <div class="image-container2">
-            <img src="../photo/cardano.png" alt="ada" class="ada">
+            <a href="https://cardano.org/">
+                <img src="../photo/cardano.png" alt="ada" class="ada">
+            </a>
             <h2>ADA : <div id="ada-price" class="loading">Loading...</div></h2>
         </div>
         <div class="image-container2">
-            <img src="../photo/snek.jpg" alt="snek" class="snek">
+            <a href="https://www.snek.com/">
+                <img src="../photo/snek.jpg" alt="snek" class="snek">
+            </a>
             <h2>SNEK : <div id="snek-price" class="loading">Loading...</div></h2>
         </div>
         <script src="../javascript/recent.js"></script>
