--- a/html/Recent.html
+++ b/html/Recent.html
@@ -2,6 +2,7 @@
     <head>
         <link rel="stylesheet" href="../css/recent.css">
         <link rel="icon" href="../photo/cardano.png">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Recently</title>
     </head>
     <body>
