update all school's score

--- a/html/progress.html
+++ b/html/progress.html
@@ -21,7 +21,7 @@
         <th>114</th>
     </tr>
     <tr>
-        <th>交大</th>
+        <th><a href="交大.html">交大</a></th>
         <td></td ><!-- 105 -->
         <td></td ><!-- 106 -->
         <td></td ><!-- 107 -->
@@ -35,7 +35,7 @@
 
     </tr>
     <tr>
-        <th>清大</th>
+        <th><a href="清大.html">清大</a></th>
         <td></td ><!-- 105 -->
         <td></td ><!-- 106 -->
         <td></td ><!-- 107 -->
@@ -48,7 +48,7 @@
         <td></td ><!-- 114 -->
     </tr>
     <tr>
-        <th>成大</th>
+        <th><a href="成大.html">成大</a></th>
         <td></td ><!-- 105 -->
         <td></td ><!-- 106 -->
         <td></td ><!-- 107 -->
@@ -61,7 +61,7 @@
         <td></td ><!-- 114 -->
     </tr>
     <tr>
-        <th>中央</th>
+        <th><a href="中央.html">中央</a></th>
         <td>&#10004;</td ><!-- 105 -->
         <td></td ><!-- 106 -->
         <td></td ><!-- 107 -->
@@ -74,7 +74,7 @@
         <td></td ><!-- 114 -->
     </tr>
     <tr>
-        <th>中山</th>
+        <th><a href="中山.html">中山</a></th>
         <td>&#10004;</td ><!-- 105 -->
         <td></td ><!-- 106 -->
         <td></td ><!-- 107 -->
@@ -87,7 +87,7 @@
         <td></td ><!-- 114 -->
     </tr>
     <tr>
-        <th>中興</th>
+        <th><a href="中興.html">中興</a></th>
         <td>&#10004;</td ><!-- 105 -->
         <td></td ><!-- 106 -->
         <td></td ><!-- 107 -->
@@ -100,7 +100,7 @@
         <td></td ><!-- 114 -->
     </tr>
     <tr>
-        <th>中正</th>
+        <th><a href="中正.html">中正</a></th>
         <td>&#10004;</td ><!-- 105 -->
         <td></td ><!-- 106 -->
         <td></td ><!-- 107 -->
@@ -113,7 +113,7 @@
         <td></td ><!-- 114 -->
     </tr>
     <tr>
-        <th>台科</th>
+        <th><a href="台科.html">台科</a></th>
         <td></td ><!-- 105 -->
         <td></td ><!-- 106 -->
         <td></td ><!-- 107 -->
