--- a/html/中山.html
+++ b/html/中山.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>progress</title>
+  <title>中山</title>
   <link rel="stylesheet" href="../css/progress.css">
 </head>
 <body>
