--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
         <P>Instagram: <a href="https://www.instagram.com/jacksonwu1224wmms/" target="_blank">JacksonWu1224wmms</a></P>
         <p>Facebook: <a href="https://www.facebook.com/profile.php?id=100018745474835" target="_blank">巫佳祐</a></p>
     </div>
+    <div id="projects">
+        <h3>Project</h3>
+        <p>project block</p>
+    </div>
 </section>
 
 <footer>
