--- a/html/交大.html
+++ b/html/交大.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>交大</title>
   <link rel="stylesheet" href="../css/progress.css">
 </head>
