--- a/html/progress.html
+++ b/html/progress.html
@@ -2,7 +2,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>progress</title>
+  <title>Past papers progress</title>
+  <link rel="icon" href="../photo/moon.png">
   <link rel="stylesheet" href="../css/progress.css">
 </head>
 <body>
