--- a/html/Crypto.html
+++ b/html/Crypto.html
@@ -1,9 +1,9 @@
 <html>
     <head>
-        <link rel="stylesheet" href="../css/recent.css">
+        <link rel="stylesheet" href="../css/crypto.css">
         <link rel="icon" href="../photo/cardano.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Recently</title>
+        <title>Cryptocurrency</title>
     </head>
     <body>
         <header><h1>price</h1></header>
@@ -37,6 +37,6 @@
             </a>
             <h2>SNEK : <div id="snek-price" class="snekclass">Loading...</div> <div id="snek-change" class="snekchange">Loading...</div></h2>
         </div>
-        <script src="../javascript/recent.js"></script>
+        <script src="../javascript/crypto.js"></script>
     </body>
 </html>
