--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <div id="sidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="toggleMenu()"></a>
-    <a href="html/Recent.html">Recent</a>
+    <a href="html/Crypto.html">Crypto</a>
     <a href="html/progress.html">progress</a>
     <a href="#projects">Projects</a>
     <a href="html/blog.html">Blog</a>
