--- a/html/blog.html
+++ b/html/blog.html
@@ -12,7 +12,9 @@
                 <h3>KNOW ABOUT ME</h3>
                 <h4>scalability interoperability sustainability</h4>
             </div>
-
+            <div class="Karp21">
+                <img src="../photo/Karp21NPC.png" width="900">
+            </div>
         </section>
     </body>
 </html>
