--- a/html/blog.html
+++ b/html/blog.html
@@ -11,6 +11,9 @@
             <div class="blog">
                 <h3>KNOW ABOUT ME</h3>
                 <h4>scalability interoperability sustainability</h4>
+                <h4><span style="color: blue">Any problem in P can be reduced to SAT in polynomial time.</span></h4>
+                <h4><span style="color: blue">If SAT has a polynomial time algorithm, then P =NP.</span></h4>
+                <h4><span style="color: blue">SAT is NP-complete.</span></h4>
             </div>
             <div class="Karp21">
                 <img src="../photo/Karp21NPC.png" width="900">
