--- a/html/progress.html
+++ b/html/progress.html
@@ -24,7 +24,7 @@
     </tr>
     <tr>
         <th><a href="交大.html">交大</a></th>
-        <td>&#10004;</td ><!-- 105 -->
+        <td><span style="color: green;">&#10004;</span></td ><!-- 105 -->
         <td></td ><!-- 106 -->
         <td></td ><!-- 107 -->
         <td></td ><!-- 108 -->
@@ -38,7 +38,7 @@
     </tr>
     <tr>
         <th><a href="清大.html">清大</a></th>
-        <td>&#10004;</td ><!-- 105 -->
+        <td><span style="color: green;">&#10004;</span></td ><!-- 105 -->
         <td></td ><!-- 106 -->
         <td></td ><!-- 107 -->
         <td></td ><!-- 108 -->
@@ -51,7 +51,7 @@
     </tr>
     <tr>
         <th><a href="成大.html">成大</a></th>
-        <td>&#10004;</td ><!-- 105 -->
+        <td><span style="color: green;">&#10004;</span></td ><!-- 105 -->
         <td></td ><!-- 106 -->
         <td></td ><!-- 107 -->
         <td></td ><!-- 108 -->
@@ -64,7 +64,7 @@
     </tr>
     <tr>
         <th><a href="中央.html">中央</a></th>
-        <td>&#10004;</td ><!-- 105 -->
+        <td><span style="color: green;">&#10004;</span></td ><!-- 105 -->
         <td></td ><!-- 106 -->
         <td></td ><!-- 107 -->
         <td></td ><!-- 108 -->
@@ -77,7 +77,7 @@
     </tr>
     <tr>
         <th><a href="中山.html">中山</a></th>
-        <td>&#10004;</td ><!-- 105 -->
+        <td><span style="color: green;">&#10004;</span></td ><!-- 105 -->
         <td></td ><!-- 106 -->
         <td></td ><!-- 107 -->
         <td></td ><!-- 108 -->
@@ -90,7 +90,7 @@
     </tr>
     <tr>
         <th><a href="中興.html">中興</a></th>
-        <td>&#10004;</td ><!-- 105 -->
+        <td><span style="color: green;">&#10004;</span></td ><!-- 105 -->
         <td></td ><!-- 106 -->
         <td></td ><!-- 107 -->
         <td></td ><!-- 108 -->
@@ -103,7 +103,7 @@
     </tr>
     <tr>
         <th><a href="中正.html">中正</a></th>
-        <td>&#10004;</td ><!-- 105 -->
+        <td><span style="color: green;">&#10004;</span></td ><!-- 105 -->
         <td></td ><!-- 106 -->
         <td></td ><!-- 107 -->
         <td></td ><!-- 108 -->
@@ -116,7 +116,7 @@
     </tr>
     <tr>
         <th><a href="台科.html">台科</a></th>
-        <td>&#10004;</td ><!-- 105 -->
+        <td><span style="color: green;">&#10004;</span></td><!-- 105 -->
         <td></td ><!-- 106 -->
         <td></td ><!-- 107 -->
         <td></td ><!-- 108 -->
