--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <a href="html/progress.html">progress</a>
     <a href="#projects">Projects</a>
     <a href="html/blog.html">Blog</a>
+    <a href="html/dice.html">Stock simulation</a>
 </div>
 
 
