--- a/html/dice.html
+++ b/html/dice.html
@@ -9,7 +9,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-  <h2>🎲 A 20-Year Monte Carlo Stock Simulation</h2>
+  <h2>🎲 A 20-Year Random Walk Stock Simulation</h2>
 
   <canvas id="stockChart"></canvas>
 
