--- a/html/dice.html
+++ b/html/dice.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <h2>🎲 A 20-Year Random Walk Stock Simulation</h2>
+  <audio id="bgm" src="../audio/epic_music.mp3" loop></audio>
 
   <canvas id="stockChart"></canvas>
 
