--- a/html/progress.html
+++ b/html/progress.html
@@ -25,7 +25,7 @@
     <tr>
         <th><a href="交大.html">交大</a></th>
         <td><span style="color: green;">&#10004;</span></td ><!-- 105 -->
-        <td></td ><!-- 106 -->
+        <td><span style="color: green;">&#10004;</span></td ><!-- 106 -->
         <td></td ><!-- 107 -->
         <td></td ><!-- 108 -->
         <td></td ><!-- 109 -->
