--- a/html/Crypto.html
+++ b/html/Crypto.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="../css/crypto.css">
-        <link rel="icon" href="../photo/cardano.png">
+        <link rel="icon" href="../photo/btc.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Cryptocurrency</title>
     </head>
