--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
     <a href="javascript:void(0)" class="closebtn" onclick="toggleMenu()"></a>
     <a href="html/Crypto.html">Crypto</a>
     <a href="html/progress.html">progress</a>
-    <a href="#projects">Projects</a>
-    <a href="html/blog.html">Blog</a>
     <a href="html/dice.html">Stock simulation</a>
+    <a href="html/sort.html">sorting</a>
+    <a href="html/blog.html">Blog</a>
+    <a href="#projects">Projects</a>
 </div>
 
 
