blog p np npc nphard

--- a/html/blog.html
+++ b/html/blog.html
@@ -52,7 +52,8 @@
                 </tbody>
             </table>
             </div>
-
+            <hr>
+                For two arbitrary <span style="color: blue">infinitely countable</span> sets A and B, both \(2^A\) and \(2^B\) are <span style="color: blue">uncountable</span>.
             <hr>
                 <h4>Different types of distances used in ML</h4>
                 <p><b>Minkowski distance:</b></p>
@@ -82,6 +83,23 @@
             <hr>
                 <h4>scalability interoperability sustainability</h4>
             <hr>
+                <div style="display: inline-block; text-align: left;">
+                    基本上這世界上的問題可以分類為：<br>
+                    (1) Unsolvable Problem<br>
+                    (2) Intractable Problem<br>
+                    (3) NP-Problem<br>
+                    (4) P-Problem
+                </div>
+                <h4>若\(\text{A}&le;_p\text{B}\), 則\(\text{B}\)為polynomial-time solvable \(\implies \) \(\text{A}\)為polynomial-time solvable</h4>
+                <h4>若\(&exist;\)一個\(\text{NP-complete}\)的問題為polynomial-time solvable, 則\(\text{P}&equals;\text{NP}\)</h4>
+                <div style="display: inline-block; text-align: left;">
+                    <h4>NP-hard:\( \forall A \in \text{NP} \), \(\text{A}&le;_p\text{B}\), 則\(\text{B}\)為NP-hard</h4>
+                    <h4>NP-complete:若\(A \in \text{NP} \)且\(\text{A}\)為NP-hard, 則\(\text{A}\)為NP-complete</h4>
+                </div>
+                <br>
+                <span style="white-space: pre;"><h3>(a)若\(\text{P}&ne;\text{NP}\)                                                           (b)若\(\text{P}&equals;\text{NP}\)</h3></span>
+                <br>
+                <img src="../photo/P_np_np-complete_np-hard..png">
                 <h4><span style="color: blue">Any problem in P can be reduced to SAT in polynomial time.</span></h4>
                 <h4><span style="color: blue">If SAT has a polynomial time algorithm, then P =NP.</span></h4>
                 <h4><span style="color: blue">SAT is NP-complete.</span></h4>
