--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
     <a href="html/dice.html">Stock simulation</a>
     <a href="html/sort.html">sorting</a>
     <a href="html/blog.html">Blog</a>
+    <div class="notes-section">
+        <div class="notes-label" onclick="toggleNotes()">
+            Notes <span id="notes-arrow">▼</span>
+        </div>
+        <div id="notes-list" class="notes-list">
+            <a href="notes/network.pdf">Network</a>
+            <a href="notes/system.pdf">System</a>
+            <a href="notes/ai.pdf">AI</a>
+        </div>
+    </div>
     <a href="#projects">Projects</a>
 </div>
 
