--- a/html/blog.html
+++ b/html/blog.html
@@ -53,6 +53,11 @@
             </table>
             </div>
             <hr>
+                <h3>The comparison-based sorting algorithm on n data requires \(&Omega;(nlogn)\) time</h3>
+                <h3>\(f(n)\)為polynomial-bounded\(\iff\) \(logf(n)=O(logn)\)</h3>
+                <h3>\(log(n!)=&Theta;(nlogn)\)</h3>
+                <h3>\(H(n)=1+1/2+1/3+1/4+...+1/n,&forall; n \in \mathbb{Z}^{+} , H(n)=&Theta;(logn)\)</h3>
+            <hr>
                 For two arbitrary <span style="color: blue">infinitely countable</span> sets A and B, both \(2^A\) and \(2^B\) are <span style="color: blue">uncountable</span>.
             <hr>
                 <h4>Different types of distances used in ML</h4>
