--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <a href="html/progress.html">progress</a>
     <a href="html/dice.html">Stock simulation</a>
     <a href="html/sort.html">sorting</a>
+    <a href="html/graph.html">graph</a>
     <a href="html/blog.html">Blog</a>
     <div class="notes-section">
         <div class="notes-label" onclick="toggleNotes()">
