--- a/html/graph.html
+++ b/html/graph.html
@@ -2,6 +2,7 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="utf-8" />
+  <link rel="icon" href="../photo/graph.png"
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Graph Canvas</title>
   <link rel="stylesheet" href="../css/graph.css" />
