--- a/html/blog.html
+++ b/html/blog.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../css/styles.css">
         <link rel="icon" href="../photo/cardano.png">
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
