--- a/html/graph.html
+++ b/html/graph.html
@@ -1,7 +1,8 @@
 <!doctype html>
-<html lang="zh-Hant">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="../photo/graph.png"
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Graph Canvas</title>
